Correct mistakes